Projeto_Compilador/tests/cases/fail/malformedProgramBlockConsts.pas
program HelloWorld(correct   , externals,    list);
    const
        Avogadro = 6.02e23;
        PageLength = 60;
        Fail;
        Border = '# * ';
        MyMove = True;
.